<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_watchlist" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_calender" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/home_report" />

    </group>
</menu>