<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".function.facebook.OauthDemoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_appauth"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/authorize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/action_margin"
            android:layout_marginRight="@dimen/action_margin"
            android:text="@string/make_authorization_request"/>

        <Button
            android:id="@+id/makeApiCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/action_margin"
            android:layout_marginRight="@dimen/action_margin"
            android:text="@string/make_api_call" />

        <Button
            android:id="@+id/signOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/action_margin"
            android:layout_marginRight="@dimen/action_margin"
            android:text="@string/sign_out" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/action_margin"
            android:layout_marginRight="@dimen/action_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/action_margin"
                android:layout_marginRight="@dimen/action_margin"
                tools:src="@drawable/ic_account" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/givenName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/action_margin"
                    android:textAppearance="?android:textAppearanceSmall"
                    tools:text="@string/tools_given_name" />

                <TextView
                    android:id="@+id/familyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/action_margin"
                    android:textAppearance="?android:textAppearanceSmall"
                    tools:text="@string/tools_family_name" />

                <TextView
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/action_margin"
                    android:textAppearance="?android:textAppearanceSmall"
                    tools:text="@string/tools_full_name" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>